--- a/app/sass/pane-right.scss
+++ b/app/sass/pane-right.scss
@@ -74,6 +74,7 @@
   .md-preview {
     overflow: scroll;
     padding: 10px 20px;
+    flex: 1 0 0;
 
     .md-preview-text-container {
       max-width: $editor-width;
